--- a/store/store/html/index.html
+++ b/store/store/html/index.html
@@ -52,5 +52,6 @@
   </footer>
   <script src="/store/store/js/layout.js"></script>
   <script src="/store/store/js/products4.js"></script>
+  <script src="/store/store/js/productCards.js"></script>
 </body>
 </html>
