Actividad: Asignar evento de teclado en línea. Finalizada

--- a/store/store/html/index.html
+++ b/store/store/html/index.html
@@ -17,7 +17,7 @@
       </a>
       <div class="form">
         <form>
-          <input type="text" placeholder="Search">
+          <input type="text" placeholder="Search" onkeyup="captureText()">
         </form>
       </div>
       <div class="social">
@@ -53,5 +53,6 @@
   <script src="/store/store/js/layout.js"></script>
   <script src="/store/store/js/products.js"></script>
   <script src="/store/store/js/productCards.js"></script>
+  <script src="/store/store/js/filterProducts.js"></script>
 </body>
 </html>
