Actividad: asignación de evento de teclado con event listener. Finalizada

--- a/store/store/html/details.html
+++ b/store/store/html/details.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div class="search">
+    <div class="menu">
       <a class="logo" href="/store/store/html/index.html">
         <img src="/store/store/assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
