--- a/store/store/html/index.html
+++ b/store/store/html/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
   <header>
-    <div class="search">
+    <div class="menu">
       <a class="logo" href="/store/store/html/index.html">
         <img src="/store/store/assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="form">
         <form>
-          <input type="text" placeholder="Search" onkeyup="captureText()">
+          <input type="text" placeholder="Search" id="search">
         </form>
       </div>
       <div class="social">
