Actividad: Capturar el id del producto. Finalizada

--- a/store/store/html/details.html
+++ b/store/store/html/details.html
@@ -15,11 +15,6 @@
       <a class="logo" href="/store/store/html/index.html">
         <img src="/store/store/assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
-      <div class="form">
-        <form>
-          <input type="text" placeholder="Search">
-        </form>
-      </div>
       <div class="social">
         <ul>
           <li><a href="#"><img src="/store/store/assets/facebook.png" alt="facebook"></a></li>
@@ -160,5 +155,7 @@
     </div>
   </footer>
   <script src="/store/store/js/layout.js"></script>
+  <script src="/store/store/js/products.js"></script>
+  <script src="/store/store/js/productDetail.js"></script>
 </body>
 </html>
