--- a/store/store/html/index.html
+++ b/store/store/html/index.html
@@ -7,13 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css..." />
-  <link rel="stylesheet" href="/store/store/css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
   <header>
     <div class="menu">
-      <a class="logo" href="/store/store/html/index.html">
-        <img src="/store/store/assets/tiendamia-logo.svg" alt="Logo Store" width="218">
+      <a class="logo" href="../html/index.html">
+        <img src="../assets/tiendamia-logo.svg" alt="Logo Store" width="218">
       </a>
       <div class="form">
         <form>
@@ -22,8 +22,8 @@
       </div>
       <div class="social">
         <ul>
-          <li><a href="#"><img src="/store/store/assets/facebook.png" alt="facebook"></a></li>
-          <li><a href="#"><img src="/store/store/assets/instagram.png" alt="instagram"></a></li>
+          <li><a href="#"><img src="../assets/facebook.png" alt="facebook"></a></li>
+          <li><a href="#"><img src="../assets/instagram.png" alt="instagram"></a></li>
         </ul>
       </div>
     </div>
@@ -50,9 +50,9 @@
       </div>
     </div>
   </footer>
-  <script src="/store/store/js/layout.js"></script>
-  <script src="/store/store/js/products.js"></script>
-  <script src="/store/store/js/productCards.js"></script>
-  <script src="/store/store/js/filterProducts.js"></script>
+  <script src="../js/layout.js"></script>
+  <script src="../js/products.js"></script>
+  <script src="../js/productCards.js"></script>
+  <script src="../js/filterProducts.js"></script>
 </body>
 </html>
