--- a/store/store/html/details.html
+++ b/store/store/html/details.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css..." />
   <link rel="stylesheet" href="../css/details.css" />
+  <script src="https://kit.fontawesome.com/e27661fab1.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -17,8 +18,10 @@
       </a>
       <div class="social">
         <ul>
-          <li><a href="#"><img src="../assets/facebook.png" alt="facebook"></a></li>
-          <li><a href="#"><img src="../assets/instagram.png" alt="instagram"></a></li>
+          <li class="social-icon"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+          <li class="social-icon"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="../html/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+          <li><a href="../html/index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li>
         </ul>
       </div>
     </div>
