Actividad: Calcular total a pagar. Finalizada

--- a/store/store/html/cart.html
+++ b/store/store/html/cart.html
@@ -39,19 +39,7 @@
     <div class="container">
       <div class="columns-container">
         <div id="cart-container"></div>
-        <div id="total" class="cart-total">
-          <div class="total-info">
-            <h2 class="title">Resumen del Pedido</h2>
-            <div class="container-total">
-                <span class="total-title">Total</span>
-                <span id="id-price" class="total-price" data-value="${price.subTotal}">S/ 12,232.00</span>
-            </div>
-            <span class="tax-policy">Incluye impuesto PAÍS y porcentaje AFIP.</span>
-            <div class="btn-primary">
-                <button class="button-buy">Comprar</button>
-            </div>
-        </div>
-        </div>
+        <div id="cart-total"></div>
       </div>
     </div>
   </section>
