Actividad: Modificar las unidades a comprar en el carrito. Finalizada

--- a/store/store/html/cart.html
+++ b/store/store/html/cart.html
@@ -39,6 +39,11 @@
     <div class="container">
       <div class="columns-container">
         <div id="cart-container"></div>
+        <div class="container-carrito" id="message-cart">
+          <div class="mgs-carrito">
+            <h2 >NO HAY PRODUCTOS EN EL CARRITO</h2>
+          </div>
+        </div>
         <div id="cart-total"></div>
       </div>
     </div>
