--- a/store/store/html/cart.html
+++ b/store/store/html/cart.html
@@ -61,7 +61,8 @@
       </div>
     </div>
   </footer>
+  <script src="../js/layout.js"></script>  
   <script src="../js/cart.js"></script>
-  <script src="../js/layout.js"></script>
+  <script src="../js/buy.js"></script>
 </body>
 </html>
