--- a/store/store/html/details.html
+++ b/store/store/html/details.html
@@ -21,6 +21,7 @@
           <li class="social-icon"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
           <li class="social-icon"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="../html/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+          <li><a href="../html/favorites.html"><i class="fa-regular fa-star"></i></a></li>     
           <li><a href="../html/index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li>
         </ul>
       </div>
